tests/snapshots/coverage__a_table_added_in_setup_without_a_spec_fails.snap
---
source: tests/coverage.rs
expression: "report(\"fail_new_table\", 1)"
---
notes
  ✓ alice  select  all   6 visible
  ✓ alice  insert  deny  deny (no policy)
  ✓ alice  update  deny  affected 0 of 6 rows
  ✓ alice  delete  deny  affected 0 of 6 rows
  ✓ guest  *       deny  4/4 ops
tags
  ✓ guest  *  deny  4/4 ops
coverage 12/16 cells (75.0%) · 4 unspecified (fail)
tags
  ○ alice  select, insert, update, delete
0 failed · 12 passed · 0 inconclusive
