tests/snapshots/coverage__cover_fails_on_gaps_with_fail.snap
---
source: tests/coverage.rs
expression: "cover(\"fail_new_table\", 1).stdout"
---
       alice  guest
notes  SIUD   SIUD
tags   ····   SIUD
coverage 12/16 cells (75.0%) · 4 unspecified (fail)
