tests/snapshots/coverage__cover_prints_the_matrix_and_passes_with_warn.snap
---
source: tests/coverage.rs
expression: "cover(\"warn\", 0).stdout"
---
       alice  guest
notes  ·I·D   ····
tags   ··UD   ····
coverage 4/16 cells (25.0%) · 12 unspecified (warn)
