tests/snapshots/coverage__full_coverage_passes_with_fail.snap
---
source: tests/coverage.rs
expression: "report(\"fail_covered\", 0)"
---
notes
  ✓ alice  select  all   6 visible
  ✓ alice  *       deny  3/3 ops
  ✓ guest  *       deny  4/4 ops
tags
  ✓ alice  select  rows: tenant_id = '…000a'  1 visible
  ✓ alice  *       deny                       3/3 ops
  ✓ guest  *       deny                       4/4 ops
coverage 16/16 cells (100.0%) · 0 unspecified (fail)
0 failed · 16 passed · 0 inconclusive
